Poet Member Administration with staffRequiredMixin to require is_staff status to change data.

--- a/python/poet/poet/templates/base.html
+++ b/python/poet/poet/templates/base.html
@@ -3,7 +3,7 @@
 <head>
     <title>
         {% block pretitle %}{% endblock %}
-        {% block title %} {{ APPLICATION_TITLE }} {% endblock %}
+        {% block title %} POET {% endblock %}
     </title>
 
     {% block head %}
