--- a/python/poet/poet/templates/poet/poetmember_detail.html
+++ b/python/poet/poet/templates/poet/poetmember_detail.html
@@ -65,6 +65,11 @@
                         {{ member.secret_key }}
                     </td>
                 </tr>
+                <tr>
+                    <th class="col-lg-4">History:</th><td>
+                    <p>Active: {% if member.active_account %}<i class="fa fa-check-circle-o fa-2x"></i>{% else %}
+                    <i class="fa fa-times-circle-o fa-2x"></i>{% endif %}</p>
+                    <p>Created: {{ member.created }}</p><p> Modified: {{ member.modified }}</p></td></tr>
                 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
                 <tr>
                     <td>
