--- a/python/poet/poet/templates/include/top-nav.html
+++ b/python/poet/poet/templates/include/top-nav.html
@@ -20,13 +20,17 @@ Just to avoid confusion...
                 <a class="" href="{% url 'member_list' %}"
                    contenteditable="false" title="POET Home"><i class="fa fa-home fa-lg"></i> POET Home</a>
             </li>
+            <li>
+                <a class="" href="{% url 'connections_list' %}"
+                   contenteditable="false" title="Connections"><i class="fa fa-link fa-lg"></i> Connections</a>
+            </li>
 
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
             {%  if user.is_authenticated %}
                 <li>
-                    <a href="{%  url 'member_list' %}" title="Member Dashboard">
+                    <a href="{%  url 'users_list' %}" title="User Dashboard">
                         <i class="fa fa-cogs"></i> {{ user.get_full_name|default:user.username }}</a>
                 </li>
 
