--- a/python/poet/poet/templates/poet/connections_list.html
+++ b/python/poet/poet/templates/poet/connections_list.html
@@ -2,6 +2,15 @@
 
 {% load i18n %}
 {% load url from future %}
+{% block breadcrumbs %}
+       <div class="container">
+        <ul class="breadcrumb">
+            <li><a href="{% url "home" %}">Home</a></li>
+            <li class="active">Connections</li>
+        </ul>
+    </div>
+{% endblock %}
+{% block pagename %}Connections{% endblock %}
 {% block content %}
     <div class="block-center">
         <h3 class="block-center-heading">{% trans "Licensee Connections" %}</h3>
